Acomodé los elementos en "New"
Acomodé los elementos en la pagina de new y puse un botón para descargar el programa que está representado por un artículo

--- a/new.html
+++ b/new.html
@@ -43,72 +43,16 @@
               <img class="thumbnail" src="img/chapala.jpg">
           </div>
           <div class="medium-6 columns medium-push-6">
-              <a href="docs/algo.pdf">programa</a>
+              
           </div>
           <div class="medium-6 columns medium-pull-6">
-              <h2>Submission Categories</h2>
-              We welcome all forms of participation, with or without a paper.
-              <br><br>
-              <li class="text-justify">Talk without a paper. Prepare only an abstract of approximately 150 words.</li>
-              <br>
-              <li>Short Procedia paper of 3-5 pages.</li>
+              <h2>Conference program</h2>
+              Aquí irá el texto 
+          </div>
+           <div class="medium-6 columns medium-pull-6">
+              <a href="docs/algo.pdf" class="button">Download program</a>
           </div>
       </div>
-
-      <div class="row">
-          <div class="medium-6 columns medium-push-6">
-              <img class="thumbnail" src="img/bica-ai-2022.png">
-          </div>
-          <div class="medium-6 columns medium-pull-6">
-              <h2>Submission Categories</h2>
-              We welcome all forms of participation, with or without a paper.
-              <br><br>
-              <li class="text-justify">Talk without a paper. Prepare only an abstract of approximately 150 words.</li>
-              <br>
-              <li>Short Procedia paper of 3-5 pages.</li>
-          </div>
-      </div>
-
-
-      <div class="row">
-          <div class="medium-6 columns">
-              <br>
-              <li> Regular Procedia paper of 6-8 pages. Extra pages might be possible, but will require the payment of additional Extra Page Fees. Any Procedia paper must be based on the provided template and cannot be shorter than 3 or longer than 10 pages.</li>
-              <br>
-              <li> Extended Cognitive Systems Research paper. The article size in this modality of submission is not limited to 8 pages, and there are no fees for extra pages. However, we recommend not exceeding more than 25 pages.</li>
-              <br><br>
-          </div>
-
-          <div class="medium-4 columns">
-              <h2>Important steps</h2>
-              <!--li><a href="https://www.dropbox.com/sh/mnln7ckguduycy9/AAB5oLpcVhmWuiCfcVDt6Gb_a?dl=0">Templates</a></li-->
-              <li><a href="https://www.dropbox.com/sh/4n9mhf10cntthsi/AAAt_Z_MhXW9PY_STyG1V7xsa?dl=0">Templates</a></li>
-              <li><a href="https://easychair.org/conferences/?conf=bicaai2022">Submission</a></li>
-              <li><a href="registration.html">Registration</a></li>
-          </div>
-      </div>
-
-
-
-      <div class="row">
-          <div class="medium-6 columns medium-pull-6">
-              <h2>Submission Instructions</h2>
-              <li class="text-justify">All papers should be formatted using the Procedia Computer Science template found <a href="https://www.dropbox.com/sh/4n9mhf10cntthsi/AAAt_Z_MhXW9PY_STyG1V7xsa?dl=0">here</a> for their initial submission. The final publication venue for each submission will be determined by the Program Committee based on the paper quality, Authors’ preference and Reviewers’ recommendations.</li>
-              <br>
-              <li>Each paper submission must include at least 3 files: PDF, source (Word or Latex), and the signed Procedia Declaration form (also found at the above link).</li>
-              <br>
-              <li> Preparing the source file in MS Word: select <i>"Save as —> Word Document (.docx)"</i>, then click <i>"Remove Macros and Save"</i>. Upload unzipped.</li>
-              <br>
-              <li>Preparing the source file in Latex: zip the entire directory into one archive.</li>
-              <br><br>
-              Finally, if you would like to propose a discussion panel or a virtual sub-event that you will chair, or to offer help as a Program Committee Member, or to provide us with a technical support, then you should select the corresponding track.
-              <br><br>
-              Multiple submissions are encouraged; however, each accepted paper must be covered by its own Registration payment. We are looking forward to your submissions!
-              <br><br>
-              <a href="https://easychair.org/conferences/?conf=bicaai2022" class="button">Make Submission</a>
-          </div>
-      </div>
-
 
       <div class="row">
           <br><br>
