Se agregaron los logos a las páginas.

--- a/cfp.html
+++ b/cfp.html
@@ -73,50 +73,50 @@
     </div>
 
     <div class="row">
-      <div class="medium-8 columns">
-        <br>
-        <h4>Cognitive Science:</h4>
-        <li>Perception, reasoning, decision making and action in BICA.</li>
-        <li>Combining natural and artificial approaches to cognition.</li>
-        <li>Comparison of different forms of learning and memory.</li>
-        <li>Theory-of-Mind, episodic and autobiographical memory in cognitive systems.</li>
-        <li>Introspection, metacognitive reasoning and self-awareness in BICA.</li>
-        <li>Models of learning and memory: robustness, flexibility, transferability.</li>
-        <li>Natural language and its role in intelligence, cognition and interaction.</li>
-        <li>Unifying frameworks and constraints for cognitive architectures.</li>
-      </div>
-
-      <div class="row">
-      </div>
         <div class="medium-8 columns">
-          <br>
-          <h4>Neuroscience:</h4>
-          <li>Bridging the gap between artificial and natural information processing.</li>
-          <li>Cognitive and learning mechanisms informed by neuroscience.</li>
-          <li>Neural correlates of cognitive and meta-cognitive processes.</li>
-          <li>Robustness, scalability and adaptability in neuromorphic systems.</li>
-          <li>Neurophysiological underpinnings and implications of deep learning models.</li>
-          <li>Physiological mechanisms of memory formation and (re)consolidation.</li>
-          <li>Representation of contextual and conceptual knowledge in neural systems.</li>
-        </div>
-
-      <div class="row">
-      </div>
-        <div class="medium-8 columns">
-          <br>
-          <h4>Social, Economic and Educational Sciences:</h4>
-          <li>Mixed-initiative systems based on inspirations from studies on brain and mind.</li>
-          <li>Agents possessing human-level social and emotional intelligence.</li>
-          <li>BICA in learning and tutoring technologies and education.</li>
-          <li>BICA models of self and their application to perception and action.</li>
-          <li>Representation, perception, understanding and expression of emotions.</li>
-          <li>Virtual characters, artificial personalities and human-compatibility.</li>
-          <li>Agent-based modeling of intelligent social phenomena.</li>
+            <br>
+            <h4>Cognitive Science:</h4>
+            <li>Perception, reasoning, decision making and action in BICA.</li>
+            <li>Combining natural and artificial approaches to cognition.</li>
+            <li>Comparison of different forms of learning and memory.</li>
+            <li>Theory-of-Mind, episodic and autobiographical memory in cognitive systems.</li>
+            <li>Introspection, metacognitive reasoning and self-awareness in BICA.</li>
+            <li>Models of learning and memory: robustness, flexibility, transferability.</li>
+            <li>Natural language and its role in intelligence, cognition and interaction.</li>
+            <li>Unifying frameworks and constraints for cognitive architectures.</li>
         </div>
 
         <div class="row">
         </div>
-          <div class="medium-12 columns">
+        <div class="medium-8 columns">
+            <br>
+            <h4>Neuroscience:</h4>
+            <li>Bridging the gap between artificial and natural information processing.</li>
+            <li>Cognitive and learning mechanisms informed by neuroscience.</li>
+            <li>Neural correlates of cognitive and meta-cognitive processes.</li>
+            <li>Robustness, scalability and adaptability in neuromorphic systems.</li>
+            <li>Neurophysiological underpinnings and implications of deep learning models.</li>
+            <li>Physiological mechanisms of memory formation and (re)consolidation.</li>
+            <li>Representation of contextual and conceptual knowledge in neural systems.</li>
+        </div>
+
+        <div class="row">
+        </div>
+        <div class="medium-8 columns">
+            <br>
+            <h4>Social, Economic and Educational Sciences:</h4>
+            <li>Mixed-initiative systems based on inspirations from studies on brain and mind.</li>
+            <li>Agents possessing human-level social and emotional intelligence.</li>
+            <li>BICA in learning and tutoring technologies and education.</li>
+            <li>BICA models of self and their application to perception and action.</li>
+            <li>Representation, perception, understanding and expression of emotions.</li>
+            <li>Virtual characters, artificial personalities and human-compatibility.</li>
+            <li>Agent-based modeling of intelligent social phenomena.</li>
+        </div>
+
+        <div class="row">
+        </div>
+        <div class="medium-12 columns">
             <br>
             <h4>General:</h4>
             <li>Mathematical basis for BICA and fundamental theoretical questions in BICA research.</li>
@@ -131,24 +131,24 @@
             <li>International trends in funding of BICA research.</li>
             <li>Cognitive Internet of Things.</li>
             <br>
-          </div>
-
-    <hr>
-
-      <div class="row">
-      </div>
-        <div class="medium-12 columns">
-          <br>
-          <h3>Format and Agenda</h3>
-          <p class="text-justify">The format of the conference is a 4-day meeting including paper presentations, panel discussions, invited talks, and demonstration showcases. Workshops and other mini-events (special sessions, breakout groups, brainstorms, socials, and more) as part of the conference will be added as needed (proposals are solicited).</p>
-          <br>
         </div>
 
-    <hr>
+        <hr>
 
         <div class="row">
         </div>
-          <div class="medium-12 columns">
+        <div class="medium-12 columns">
+            <br>
+            <h3>Format and Agenda</h3>
+            <p class="text-justify">The format of the conference is a 4-day meeting including paper presentations, panel discussions, invited talks, and demonstration showcases. Workshops and other mini-events (special sessions, breakout groups, brainstorms, socials, and more) as part of the conference will be added as needed (proposals are solicited).</p>
+            <br>
+        </div>
+
+        <hr>
+
+        <div class="row">
+        </div>
+        <div class="medium-12 columns">
             <br>
             <h3>Publication Venues</h3>
             <!--p>BICA*AI 20222 accepted papers may be published in one of the three official BICA*AI 2022 venues:</p-->
@@ -157,47 +157,50 @@
             <li class="text-justify">A special volume of Elsevier's <a href="https://www.journals.elsevier.com/procedia-computer-science" target="_blank">Procedia Computer Science</a>, with a collection of 3-to-8-page articles (extra pages might be possible, but will require the payment of additional Extra Page Fees). The open-access journal Procedia Computer Science (ISSN: 1877-0509) is a high-quality peer reviewed conference proceedings series published by Elsevier B.V. and indexed in Scopus, SCI Conference Proceedings Citation Index, GEOBASE, INSPEC, as well as DBLP. CiteScore=3.5, SJR=0.334, SNIP=1.035.</li>
             <br>
             <li class="text-justify">A Special Issue of the <a href="https://www.journals.elsevier.com/cognitive-systems-research" target="_blank">Cognitive Systems Research</a>: a peer-reviewed academic journal published by Elsevier B.V. The article size in this modality of submission is not limited to 8 pages, and there are no fees for extra pages. The recommended article length is from 10 to 25 journal pages. Cognitive Systems Research is indexed in Web of Science Core Collection, Scopus, and many other major databases. Its quartile is Q1 in Experimental Psychology, according to Clarivate’s Web of Science Journal Citation Reports (JCR), and Q2 in Artificial Intelligence, according to JCR and to Scopus. Its JCR Impact Factor is 3.523, Scopus CiteScore = 6.0.</li>
-          <br>
+            <br>
 
-          </div>
+        </div>
 
-      <hr>
+        <hr>
 
         <div class="row">
         </div>
-          <div class="medium-12 columns">
-            <p class="text-justify">BICA Society is a nonprofit international organization founded in 2010 with the purpose to promote and facilitate the transdisciplinary study of Brain-Inspired Cognitive Architectures (BICA), aiming at the emergence of a unifying, generally accepted framework for the design, characterization and implementation of human-level artificial intelligence. Cognitive Architectures are general-purpose computational architectures inspired by scientific theories developed to explain cognition in animals and men. Cognitive Architectures have been employed in many different kinds of applications, since the control of robots to decision-making processes in intelligent agents. In many cases, a cognitive architecture is decomposed based on the cognitive capabilities they are able to provide, like perception, attention, memory, reasoning, learning, behavior generation, etc. Cognitive Architectures are, at the same time, theoretical modelings for how many different cognitive processes interact to each other in order to sense, reason and act, and also software frameworks which can be reused through different applications. The field of research on Cognitive Architectures has now a history of more than 40 years of research. A comparative table, presenting a comprehensive review of the most important implemented CAs in the literature is available at the BICA Society web site.The "BICA Challenge" was proposed originally in 2012 by BICA Society, as the challenge to create a general-purpose, real-life computational equivalent of the human mind using an approach based on cognitive architectures. It differentiates to other methodologies on Artificial Intelligence by its explicit inspiration on cognitive neuroscience and neuro-psychology.
+        <div class="medium-12 columns">
+            <p class="text-justify">
+                BICA Society is a nonprofit international organization founded in 2010 with the purpose to promote and facilitate the transdisciplinary study of Brain-Inspired Cognitive Architectures (BICA), aiming at the emergence of a unifying, generally accepted framework for the design, characterization and implementation of human-level artificial intelligence. Cognitive Architectures are general-purpose computational architectures inspired by scientific theories developed to explain cognition in animals and men. Cognitive Architectures have been employed in many different kinds of applications, since the control of robots to decision-making processes in intelligent agents. In many cases, a cognitive architecture is decomposed based on the cognitive capabilities they are able to provide, like perception, attention, memory, reasoning, learning, behavior generation, etc. Cognitive Architectures are, at the same time, theoretical modelings for how many different cognitive processes interact to each other in order to sense, reason and act, and also software frameworks which can be reused through different applications. The field of research on Cognitive Architectures has now a history of more than 40 years of research. A comparative table, presenting a comprehensive review of the most important implemented CAs in the literature is available at the BICA Society web site.The "BICA Challenge" was proposed originally in 2012 by BICA Society, as the challenge to create a general-purpose, real-life computational equivalent of the human mind using an approach based on cognitive architectures. It differentiates to other methodologies on Artificial Intelligence by its explicit inspiration on cognitive neuroscience and neuro-psychology.
             </p>
             <br><br>
             <p>Sponsors, co-organizers and partners are represented by their logos below.</p>
-          </div>
+        </div>
 
-    <hr>
+        <hr>
 
-    <div class="row column">
-      <ul class="vertical medium-horizontal menu expanded text-center">
-        <li><div class="stat"><a href="http://bica.ai/" target="_blank"><img src="img/bica.gif" width="120" height="120"></a></div></li>
-        <li><div class="stat"><a href="https://www.intel.com/content/www/us/en/homepage.html" target="_blank"><img src="img/logo_intel.png" width="120" height="120"></a></div></li>
-        <li><div class="stat"><a href="https://www.ibm.com/us-en/" target="_blank"><img src="img/logo_ibm.png" width="120" height="120"></a></div></li>
-        <li><div class="stat"><a href="https://www.continental.com/" target="_blank"><img src="img/logo_continental.png" width="140" height="140"></a></div></li>
-      </ul>
-    </div>
+        <div class="row column">
+            <ul class="vertical medium-horizontal menu expanded text-center">
+                <li><div class="stat"><a href="http://bica.ai/" target="_blank"><img src="img/bica.gif" width="120" height="120"></a></div></li>
+                <li><div class="stat"><a href="https://www.intel.com/content/www/us/en/homepage.html" target="_blank"><img src="img/logo_intel.png" width="120" height="120"></a></div></li>
+                <li><div class="stat"><a href="https://www.ibm.com/us-en/" target="_blank"><img src="img/logo_ibm.png" width="120" height="120"></a></div></li>
+                <li><div class="stat"><a href="https://www.continental.com/" target="_blank"><img src="img/logo_continental.png" width="170" height="170"></a></div></li>
+                <li><div class="stat"><a href="https://www.coecytjal.org.mx/" target="_blank"><img src="img/logo consejo azul.png" width="240" height="230"></a></div></li>
+            </ul>
+        </div>
 
-    <div class="row column">
-      <ul class="vertical medium-horizontal menu expanded text-center">
-        <li><a href="http://cuvalles.udg.mx/" target="_blank"><div class="stat"><img src="img/logo_cuvalles.png" width="280" height="180"></div></a></li>
-        <li><a href="https://unidad.gdl.cinvestav.mx/index.html" target="_blank"><div class="stat"><img src="img/logo_cinvestav.jpg" width="160" height="160"></div></a></li>
-        <li><a href="https://uag.mx/" target="_blank"><div class="stat"><img src="img/logo_uag.png" width="130" height="130"></div></a></li>
-        <li><a href="http://www.cunorte.udg.mx/" target="_blank"><div class="stat"><img src="img/logo_cunorte.png" width="280" height="180"></div></a></li>
-      </ul>
-    </div>
+        <div class="row column">
+            <ul class="vertical medium-horizontal menu expanded text-center">
+                <li><a href="http://cuvalles.udg.mx/" target="_blank"><div class="stat"><img src="img/logo_cuvalles.png" width="280" height="180"></div></a></li>
+                <li><a href="https://unidad.gdl.cinvestav.mx/index.html" target="_blank"><div class="stat"><img src="img/logo_cinvestav.jpg" width="160" height="160"></div></a></li>
+                <li><a href="https://uag.mx/" target="_blank"><div class="stat"><img src="img/logo_uag.png" width="130" height="130"></div></a></li>
+                <li><a href="http://www.cunorte.udg.mx/" target="_blank"><div class="stat"><img src="img/logo_cunorte.png" width="280" height="180"></div></a></li>
+                <li><div class="stat"><a href="https://sicyt.jalisco.gob.mx/" target="_blank"><img src="img/logo sicyt azul.png" width="220" height="210"></a></div></li>
+            </ul>
+        </div>
 
-    <hr>
+        <hr>
 
-    <script src="js/jquery-2.1.4.min.js"></script>
-    <script src="js/foundation.js"></script>
-    <script>
-      $(document).foundation();
-    </script>
-  </body>
+        <script src="js/jquery-2.1.4.min.js"></script>
+        <script src="js/foundation.js"></script>
+        <script>
+            $(document).foundation();
+        </script>
+</body>
 </html>
