--- a/program.html
+++ b/program.html
@@ -44,13 +44,13 @@
               <img class="thumbnail" src="img/chapala.jpg">
           </div>
           <div class="medium-6 columns medium-push-6">
-              
+
           </div>
           <div class="medium-6 columns medium-pull-6">
               <h2>Conference program</h2>
-              Aquí irá el texto 
+              Aquí irá el texto
           </div>
-           <div class="medium-6 columns medium-pull-6">
+          <div class="medium-6 columns medium-pull-6">
               <a href="docs/algo.pdf" class="button">Download program</a>
           </div>
       </div>
@@ -67,7 +67,8 @@
               <li><div class="stat"><a href="http://bica.ai/" target="_blank"><img src="img/bica.gif" width="120" height="120"></a></div></li>
               <li><div class="stat"><a href="https://www.intel.com/content/www/us/en/homepage.html" target="_blank"><img src="img/logo_intel.png" width="120" height="120"></a></div></li>
               <li><div class="stat"><a href="https://www.ibm.com/us-en/" target="_blank"><img src="img/logo_ibm.png" width="120" height="120"></a></div></li>
-              <li><div class="stat"><a href="https://www.continental.com/" target="_blank"><img src="img/logo_continental.png" width="140" height="140"></a></div></li>
+              <li><div class="stat"><a href="https://www.continental.com/" target="_blank"><img src="img/logo_continental.png" width="170" height="170"></a></div></li>
+              <li><div class="stat"><a href="https://www.coecytjal.org.mx/" target="_blank"><img src="img/logo consejo azul.png" width="240" height="230"></a></div></li>
           </ul>
       </div>
 
@@ -77,6 +78,7 @@
               <li><a href="https://unidad.gdl.cinvestav.mx/index.html" target="_blank"><div class="stat"><img src="img/logo_cinvestav.jpg" width="160" height="160"></div></a></li>
               <li><a href="https://uag.mx/" target="_blank"><div class="stat"><img src="img/logo_uag.png" width="130" height="130"></div></a></li>
               <li><a href="http://www.cunorte.udg.mx/" target="_blank"><div class="stat"><img src="img/logo_cunorte.png" width="280" height="180"></div></a></li>
+              <li><div class="stat"><a href="https://sicyt.jalisco.gob.mx/" target="_blank"><img src="img/logo sicyt azul.png" width="220" height="210"></a></div></li>
           </ul>
       </div>
 
