--- a/registration.html
+++ b/registration.html
@@ -78,48 +78,50 @@
 
     <br>
     <div class="row">
-      <div class="medium-8 columns">
-        <h3>How to register</h3>
-        <p class="text-justify">
-           Go to the <a href="https://www.eventbrite.com/e/2022-annual-international-conference-on-bica-tickets-312090640507">Eventbrite registration page</a> and click on Tickets. Then select the option(s) you need. If you have problems with, or questions about the method of registration payment, please email <a href="mailto:alexei.samsonovich@gmail.com">Alexei.Samsonovich@gmail.com</a>
-        </p>
-        <p class="text-justify">If you are presenting a poster, then we ask you to prepare an electronic poster and upload it to EasyChair to the e-Poster field of your original submission. Additional instructions for preparing your electronic poster will be offered in next days.</p>
+        <div class="medium-8 columns">
+            <h3>How to register</h3>
+            <p class="text-justify">
+                Go to the <a href="https://www.eventbrite.com/e/2022-annual-international-conference-on-bica-tickets-312090640507">Eventbrite registration page</a> and click on Tickets. Then select the option(s) you need. If you have problems with, or questions about the method of registration payment, please email <a href="mailto:alexei.samsonovich@gmail.com">Alexei.Samsonovich@gmail.com</a>
+            </p>
+            <p class="text-justify">If you are presenting a poster, then we ask you to prepare an electronic poster and upload it to EasyChair to the e-Poster field of your original submission. Additional instructions for preparing your electronic poster will be offered in next days.</p>
 
-        <h3>Early-Bird Registration is available</h3>
-        <br><br>
-        <a href="https://www.eventbrite.com/e/2022-annual-international-conference-on-bica-tickets-312090640507" class="button">Register Now</a>
+            <h3>Early-Bird Registration is available</h3>
+            <br><br>
+            <a href="https://www.eventbrite.com/e/2022-annual-international-conference-on-bica-tickets-312090640507" class="button">Register Now</a>
 
-        <br><br>
-        <p>Sponsors, co-organizers and partners are represented by their logos below.</p>
-      </div>
+            <br><br>
+            <p>Sponsors, co-organizers and partners are represented by their logos below.</p>
+        </div>
 
 
-    <hr>
+        <hr>
 
-    <div class="row column">
-      <ul class="vertical medium-horizontal menu expanded text-center">
-        <li><div class="stat"><a href="http://bica.ai/" target="_blank"><img src="img/bica.gif" width="120" height="120"></a></div></li>
-        <li><div class="stat"><a href="https://www.intel.com/content/www/us/en/homepage.html" target="_blank"><img src="img/logo_intel.png" width="120" height="120"></a></div></li>
-        <li><div class="stat"><a href="https://www.ibm.com/us-en/" target="_blank"><img src="img/logo_ibm.png" width="120" height="120"></a></div></li>
-        <li><div class="stat"><a href="https://www.continental.com/" target="_blank"><img src="img/logo_continental.png" width="140" height="140"></a></div></li>
-      </ul>
-    </div>
+        <div class="row column">
+            <ul class="vertical medium-horizontal menu expanded text-center">
+                <li><div class="stat"><a href="http://bica.ai/" target="_blank"><img src="img/bica.gif" width="120" height="120"></a></div></li>
+                <li><div class="stat"><a href="https://www.intel.com/content/www/us/en/homepage.html" target="_blank"><img src="img/logo_intel.png" width="120" height="120"></a></div></li>
+                <li><div class="stat"><a href="https://www.ibm.com/us-en/" target="_blank"><img src="img/logo_ibm.png" width="120" height="120"></a></div></li>
+                <li><div class="stat"><a href="https://www.continental.com/" target="_blank"><img src="img/logo_continental.png" width="170" height="170"></a></div></li>
+                <li><div class="stat"><a href="https://www.coecytjal.org.mx/" target="_blank"><img src="img/logo consejo azul.png" width="240" height="230"></a></div></li>
+            </ul>
+        </div>
 
-    <div class="row column">
-      <ul class="vertical medium-horizontal menu expanded text-center">
-        <li><a href="http://cuvalles.udg.mx/" target="_blank"><div class="stat"><img src="img/logo_cuvalles.png" width="280" height="180"></div></a></li>
-        <li><a href="https://unidad.gdl.cinvestav.mx/index.html" target="_blank"><div class="stat"><img src="img/logo_cinvestav.jpg" width="160" height="160"></div></a></li>
-        <li><a href="https://uag.mx/" target="_blank"><div class="stat"><img src="img/logo_uag.png" width="130" height="130"></div></a></li>
-        <li><a href="http://www.cunorte.udg.mx/" target="_blank"><div class="stat"><img src="img/logo_cunorte.png" width="280" height="180"></div></a></li>
-      </ul>
-    </div>
+        <div class="row column">
+            <ul class="vertical medium-horizontal menu expanded text-center">
+                <li><a href="http://cuvalles.udg.mx/" target="_blank"><div class="stat"><img src="img/logo_cuvalles.png" width="280" height="180"></div></a></li>
+                <li><a href="https://unidad.gdl.cinvestav.mx/index.html" target="_blank"><div class="stat"><img src="img/logo_cinvestav.jpg" width="160" height="160"></div></a></li>
+                <li><a href="https://uag.mx/" target="_blank"><div class="stat"><img src="img/logo_uag.png" width="130" height="130"></div></a></li>
+                <li><a href="http://www.cunorte.udg.mx/" target="_blank"><div class="stat"><img src="img/logo_cunorte.png" width="280" height="180"></div></a></li>
+                <li><div class="stat"><a href="https://sicyt.jalisco.gob.mx/" target="_blank"><img src="img/logo sicyt azul.png" width="220" height="210"></a></div></li>
+            </ul>
+        </div>
 
-    <hr>
+        <hr>
 
-    <script src="js/jquery-2.1.4.min.js"></script>
-    <script src="js/foundation.js"></script>
-    <script>
-      $(document).foundation();
-    </script>
-  </body>
+        <script src="js/jquery-2.1.4.min.js"></script>
+        <script src="js/foundation.js"></script>
+        <script>
+            $(document).foundation();
+        </script>
+</body>
 </html>
