--- a/venue.html
+++ b/venue.html
@@ -40,71 +40,73 @@
     </script>
 
     <div class="row">
-      <div class="medium-6 columns medium-push-6">
-        <img class="thumbnail" src="img/bica-ai-2022.png">
-      </div>
-      <div class="medium-6 columns medium-pull-6">
-        <h2>Venue</h2>
-        <li> The conference will be held at the Autonomous University of Guadalajara in Zapopan, Mexico.</li>
-        <li> Address: Av. Patria 1201, Lomas del Valle, 45129 Zapopan, Mexico. </li>
-    </div>
+        <div class="medium-6 columns medium-push-6">
+            <img class="thumbnail" src="img/bica-ai-2022.png">
+        </div>
+        <div class="medium-6 columns medium-pull-6">
+            <h2>Venue</h2>
+            <li> The conference will be held at the Autonomous University of Guadalajara in Zapopan, Mexico.</li>
+            <li> Address: Av. Patria 1201, Lomas del Valle, 45129 Zapopan, Mexico. </li>
+        </div>
 
 
-    <div class="row">
-      <div class="medium-6 columns">
-        <a href="https://www.google.com/maps/place/Universidad+Aut%C3%B3noma+de+Guadalajara/@20.6975464,-103.408465,14.5z/data=!4m5!3m4!1s0x8428aee580d14005:0x29c32d113930043d!8m2!3d20.6946969!4d-103.4181787" target="_blank"><img src="img/map.png" width="400" height="600"></a>
-      </div>
+        <div class="row">
+            <div class="medium-6 columns">
+                <a href="https://www.google.com/maps/place/Universidad+Aut%C3%B3noma+de+Guadalajara/@20.6975464,-103.408465,14.5z/data=!4m5!3m4!1s0x8428aee580d14005:0x29c32d113930043d!8m2!3d20.6946969!4d-103.4181787" target="_blank"><img src="img/map.png" width="400" height="600"></a>
+            </div>
 
-      <div class="medium-4 columns">
-        <h2>Important steps</h2>
-        <!--li><a href="https://www.dropbox.com/sh/mnln7ckguduycy9/AAB5oLpcVhmWuiCfcVDt6Gb_a?dl=0">Templates</a></li-->
-        <li><a href="https://www.dropbox.com/sh/4n9mhf10cntthsi/AAAt_Z_MhXW9PY_STyG1V7xsa?dl=0">Templates</a></li>
-        <li><a href="https://easychair.org/conferences/?conf=bicaai2022">Submission</a></li>
-        <li><a href="registration.html">Registration</a></li>
-      </div>
+            <div class="medium-4 columns">
+                <h2>Important steps</h2>
+                <!--li><a href="https://www.dropbox.com/sh/mnln7ckguduycy9/AAB5oLpcVhmWuiCfcVDt6Gb_a?dl=0">Templates</a></li-->
+                <li><a href="https://www.dropbox.com/sh/4n9mhf10cntthsi/AAAt_Z_MhXW9PY_STyG1V7xsa?dl=0">Templates</a></li>
+                <li><a href="https://easychair.org/conferences/?conf=bicaai2022">Submission</a></li>
+                <li><a href="registration.html">Registration</a></li>
+            </div>
 
-    </div>
+        </div>
 
-    <div class="row">
-      <br><br>
-      <h2>Lodging</h2>
-        <li> We recommend the hotel <a href="flyer.pdf" target="_blank"> HS HOTSSON SMART Guadalajara - Autónoma. </a></li>
-        <li> <b>Use the BICA code to get a special price on your reservation.</b> If you have any problem making your reservation, please, contact the hotel staff by phone (+52 477 719 8010) or by email (reservaciones11@hotsson.com; entral_reservaciones@capitali.com) to solve any inconvenience. Additionally, you can contact Jonatan Hernando Rosales by email (jonathan.rosales@edu.uag.mx). He is a member of the local committee of BICA*AI 2022. </li>
-    </div>
+        <div class="row">
+            <br><br>
+            <h2>Lodging</h2>
+            <li> We recommend the hotel <a href="flyer.pdf" target="_blank"> HS HOTSSON SMART Guadalajara - Autónoma. </a></li>
+            <li> <b>Use the BICA code to get a special price on your reservation.</b> If you have any problem making your reservation, please, contact the hotel staff by phone (+52 477 719 8010) or by email (reservaciones11@hotsson.com; entral_reservaciones@capitali.com) to solve any inconvenience. Additionally, you can contact Jonatan Hernando Rosales by email (jonathan.rosales@edu.uag.mx). He is a member of the local committee of BICA*AI 2022. </li>
+        </div>
 
 
 
-    <div class="row">
-          <br><br>
-          <p>Sponsors, co-organizers and partners are represented by their logos below.</p>
-    </div>
+        <div class="row">
+            <br><br>
+            <p>Sponsors, co-organizers and partners are represented by their logos below.</p>
+        </div>
 
-    <hr>
+        <hr>
 
-    <div class="row column">
-      <ul class="vertical medium-horizontal menu expanded text-center">
-        <li><div class="stat"><a href="http://bica.ai/" target="_blank"><img src="img/bica.gif" width="120" height="120"></a></div></li>
-        <li><div class="stat"><a href="https://www.intel.com/content/www/us/en/homepage.html" target="_blank"><img src="img/logo_intel.png" width="120" height="120"></a></div></li>
-        <li><div class="stat"><a href="https://www.ibm.com/us-en/" target="_blank"><img src="img/logo_ibm.png" width="120" height="120"></a></div></li>
-        <li><div class="stat"><a href="https://www.continental.com/" target="_blank"><img src="img/logo_continental.png" width="140" height="140"></a></div></li>
-      </ul>
-    </div>
+        <div class="row column">
+            <ul class="vertical medium-horizontal menu expanded text-center">
+                <li><div class="stat"><a href="http://bica.ai/" target="_blank"><img src="img/bica.gif" width="120" height="120"></a></div></li>
+                <li><div class="stat"><a href="https://www.intel.com/content/www/us/en/homepage.html" target="_blank"><img src="img/logo_intel.png" width="120" height="120"></a></div></li>
+                <li><div class="stat"><a href="https://www.ibm.com/us-en/" target="_blank"><img src="img/logo_ibm.png" width="120" height="120"></a></div></li>
+                <li><div class="stat"><a href="https://www.continental.com/" target="_blank"><img src="img/logo_continental.png" width="170" height="170"></a></div></li>
+                <li><div class="stat"><a href="https://www.coecytjal.org.mx/" target="_blank"><img src="img/logo consejo azul.png" width="240" height="230"></a></div></li>
+            </ul>
+        </div>
 
-    <div class="row column">
-      <ul class="vertical medium-horizontal menu expanded text-center">
-        <li><a href="http://cuvalles.udg.mx/" target="_blank"><div class="stat"><img src="img/logo_cuvalles.png" width="280" height="180"></div></a></li>
-        <li><a href="https://unidad.gdl.cinvestav.mx/index.html" target="_blank"><div class="stat"><img src="img/logo_cinvestav.jpg" width="160" height="160"></div></a></li>
-        <li><a href="https://uag.mx/" target="_blank"><div class="stat"><img src="img/logo_uag.png" width="130" height="130"></div></a></li>
-        <li><a href="http://www.cunorte.udg.mx/" target="_blank"><div class="stat"><img src="img/logo_cunorte.png" width="280" height="180"></div></a></li>
-      </ul>
-    </div>
+        <div class="row column">
+            <ul class="vertical medium-horizontal menu expanded text-center">
+                <li><a href="http://cuvalles.udg.mx/" target="_blank"><div class="stat"><img src="img/logo_cuvalles.png" width="280" height="180"></div></a></li>
+                <li><a href="https://unidad.gdl.cinvestav.mx/index.html" target="_blank"><div class="stat"><img src="img/logo_cinvestav.jpg" width="160" height="160"></div></a></li>
+                <li><a href="https://uag.mx/" target="_blank"><div class="stat"><img src="img/logo_uag.png" width="130" height="130"></div></a></li>
+                <li><a href="http://www.cunorte.udg.mx/" target="_blank"><div class="stat"><img src="img/logo_cunorte.png" width="280" height="180"></div></a></li>
+                <li><div class="stat"><a href="https://sicyt.jalisco.gob.mx/" target="_blank"><img src="img/logo sicyt azul.png" width="220" height="210"></a></div></li>
+            </ul>
+        </div>
 
-    <hr>
+        <hr>
 
-    <script src="js/jquery-2.1.4.min.js"></script>
-    <script src="js/foundation.js"></script>
-    <script>
-      $(document).foundation();
-    </script>
-  </body>
+        <script src="js/jquery-2.1.4.min.js"></script>
+        <script src="js/foundation.js"></script>
+        <script>
+            $(document).foundation();
+        </script>
+</body>
 </html>
