--- a/program.html
+++ b/program.html
@@ -28,7 +28,7 @@
 
       <div class="callout large">
           <div class="row column text-center">
-              <h2>RASUL  2022 Annual International Conference on Brain-Inspired Cognitive Architectures for Artificial Intelligence</h2>
+              <h2>2022 Annual International Conference on Brain-Inspired Cognitive Architectures for Artificial Intelligence</h2>
               <p class="lead">The 13th Annual Meeting of the BICA Society (BICA*AI 2022), Guadalajara, Mexico, hold on September 22-25.</p>
               <img id="imgRand" class="thumbnail" src="">
           </div>
