Error of organizers in every page corrected.

--- a/index.html
+++ b/index.html
@@ -12,8 +12,8 @@
       <div class="top-bar">
           <div class="top-bar-right">
               <ul class="menu">
-                  <li><a href="index.html">HOME</a></li>
-                  <li><a href="#">ORGANIZERS</a></li>
+                  <li><a href="#">HOME</a></li>
+                  <li><a href="organizers.html">ORGANIZERS</a></li>
                   <li><a href="cfp.html">CFP</a></li>
                   <li><a href="program.html">PROGRAM</a></li>
                   <li><a href="speakers.html">SPEAKERS</a></li>
