--- a/speakers.html
+++ b/speakers.html
@@ -13,10 +13,10 @@
           <div class="top-bar-right">
               <ul class="menu">
                   <li><a href="index.html">HOME</a></li>
-                  <li><a href="#">ORGANIZERS</a></li>
+                  <li><a href="organizers.html">ORGANIZERS</a></li>
                   <li><a href="cfp.html">CFP</a></li>
                   <li><a href="program.html">PROGRAM</a></li>
-                  <li><a href="speakers.html">SPEAKERS</a></li>
+                  <li><a href="#">SPEAKERS</a></li>
                   <li><a href="submission.html">SUBMISSION</a></li>
                   <li><a href="venue.html">VENUE</a></li>
                   <li><a href="socials.html">SOCIALS</a></li>
