--- a/program.html
+++ b/program.html
@@ -13,9 +13,9 @@
           <div class="top-bar-right">
               <ul class="menu">
                   <li><a href="index.html">HOME</a></li>
-                  <li><a href="#">ORGANIZERS</a></li>
+                  <li><a href="organizers.html">ORGANIZERS</a></li>
                   <li><a href="cfp.html">CFP</a></li>
-                  <li><a href="program.html">PROGRAM</a></li>
+                  <li><a href="#">PROGRAM</a></li>
                   <li><a href="speakers.html">SPEAKERS</a></li>
                   <li><a href="submission.html">SUBMISSION</a></li>
                   <li><a href="venue.html">VENUE</a></li>
