Youtube chanel added

--- a/program.html
+++ b/program.html
@@ -41,7 +41,9 @@
 
       <div class="row">
           <div class="medium-6 columns medium-push-6">
-              <img class="thumbnail" src="img/chapala.jpg">
+              <h2>Live now</h2>
+              <h5>Youtube channel for following the talks of BICA*AI 2022</h5>
+              <a href="https://www.youtube.com/user/CinvestavGuadalajara" target="_blank"> <h4>CinvestavGuadalajara</h4></a>
           </div>
           <div class="medium-6 columns medium-push-6">
 
@@ -53,7 +55,10 @@
           <div class="medium-6 columns medium-pull-6">
               <a href="docs/algo.pdf" class="button">Download program</a>
           </div>
+
+
       </div>
+
 
       <div class="row">
           <br><br>
