Local Staff added and Program tab updated.

--- a/organizers.html
+++ b/organizers.html
@@ -90,6 +90,15 @@
             </p>
         </div>
 
+        <div class="medium-8 columns">
+            <h3>Local Staff</h3>
+            <p>
+                Ilse Aribei Hernández Meza
+                <br> Raúl Rubén Romero López
+                <br> Heiler Duarte Moreno
+            </p>
+        </div>
+
         <div class="row">
         </div>
         <div class="medium-8 columns" id="organizers">
