--- a/program.html
+++ b/program.html
@@ -50,10 +50,10 @@
           </div>
           <div class="medium-6 columns medium-pull-6">
               <h2>Conference program</h2>
-              Aquí irá el texto
+              Program will be available soon.
           </div>
           <div class="medium-6 columns medium-pull-6">
-              <a href="docs/algo.pdf" class="button">Download program</a>
+              <a href="" class="button">Download program</a>
           </div>
 
 
