Program added and download buttom removed.

--- a/program.html
+++ b/program.html
@@ -41,25 +41,25 @@
 
       <div class="row">
           <div class="medium-6 columns medium-push-6">
-              <h2>Live now</h2>
-              <h5>Youtube channel for following the talks of BICA*AI 2022</h5>
-              <a href="https://www.youtube.com/user/CinvestavGuadalajara" target="_blank"> <h4>CinvestavGuadalajara</h4></a>
-          </div>
-          <div class="medium-6 columns medium-push-6">
-
+              <img class="thumbnail" src="img/bica-ai-2022.png">
           </div>
           <div class="medium-6 columns medium-pull-6">
               <h2>Conference program</h2>
-              Program will be available soon.
+              <h4>Click on the image to download the program.</h4>
+              
+              <a href="docs/schedule.pdf" download>
+                  <img class="thumbnail" src="img/schedule.png" </img>
+              </a>
           </div>
+
+      <div class="row">
           <div class="medium-6 columns medium-pull-6">
-              <a href="" class="button">Download program</a>
+              <h2>Live now</h2>
+              <h4>Youtube channel for following the talks of BICA*AI 2022</h4>
+              
+              <a href="https://www.youtube.com/user/CinvestavGuadalajara" target="_blank"> <h2>CinvestavGuadalajara</h2></a>
           </div>
-
-
       </div>
-
-
       <div class="row">
           <br><br>
           <p>Sponsors, co-organizers and partners are represented by their logos below.</p>
