Updated the Bica schedule pdf file

--- a/program.html
+++ b/program.html
@@ -47,7 +47,7 @@
               <h2>Conference program</h2>
               <h4>Click on the image to download the program.</h4>
               
-              <a href="docs/schedule.pdf" download>
+              <a href="docs/BICA_AI 2022_schedule.pdf" download>
                   <img class="thumbnail" src="img/schedule.png" </img>
               </a>
           </div>
