Local staff added at the end and important steps added at the program html.

--- a/program.html
+++ b/program.html
@@ -42,7 +42,16 @@
       <div class="row">
           <div class="medium-6 columns medium-push-6">
               <img class="thumbnail" src="img/bica-ai-2022.png">
+              <div class="medium-push-6">
+                  <h2>Important steps</h2>
+                  <!--li><a href="https://www.dropbox.com/sh/mnln7ckguduycy9/AAB5oLpcVhmWuiCfcVDt6Gb_a?dl=0">Templates</a></li-->
+                  <li><a href="https://www.dropbox.com/sh/4n9mhf10cntthsi/AAAt_Z_MhXW9PY_STyG1V7xsa?dl=0">Templates</a></li>
+                  <li><a href="https://easychair.org/conferences/?conf=bicaai2022">Submission</a></li>
+                  <li><a href="registration.html">Registration</a></li>
+              </div>
           </div>
+          
+          
           <div class="medium-6 columns medium-pull-6">
               <h2>Conference program</h2>
               <h4>Click on the image to download the program.</h4>
